# tinylang

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  Procfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  sitemap.xml  test.py
.devcontainer/: devcontainer.json
.github/workflows/: CD.yml  CI.yml  Release.yml
api_reference/: index.html
chains/: index.html
chat_claude/: index.html
chat_gemini/: index.html
chat_history/: index.html
chat_openai/: index.html
conversation_memory/: index.html
docs/: api_reference.md  chains.md  chat_claude.md  chat_gemini.md  chat_history.md  chat_openai.md  conf.py  conversation_memory.md  functions.md  getting_started.md  images.md  index.md  index.rst  installation.rst  intro.rst  tool_usage.md
examples/: chains.ipynb  functions.ipynb  images.ipynb  llm.ipynb  llm.py  memory.ipynb  memory.py  prompts.ipynb
functions/: index.html
getting_started/: index.html
images/: index.html
search/: search_index.json
tests/: test_sanity.py  test_tools.py
tests/chains/: test_chain.py
tests/functions/: test_function.py
tests/images/: test_image.py
tests/llms/: test_openai.py
tests/memory/: test_conversation_memory.py  test_messages.py  test_prompts.py
tinylang/chains/: __init__.py  base.py
tinylang/functions/: __init__.py  function.py
tinylang/history/: __init__.py  chat.py
tinylang/images/: __init__.py  image.py
tool_usage/: index.html
(+19 files in other folders)
