[tool.black]
line-length = 88
target-version = ['py311']

[tool.black.excludes]
paths = [
    ".venv",
    ".git",
    "build",
    "dist",
]

[build-system]
requires = ["black"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true


[tool.mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".venv",
    ".git",
    "build",
    "dist",
]

